ui/src/backoffice/common/components/ResultItem/ResultItem.less
.result-item {
  .ant-card {
    height: 100%;
    .ant-card-body {
      padding: 10px;
    }
  }

  .ant-descriptions-small .ant-descriptions-row > td {
    padding-bottom: 2px;
  }

  .col-pub-select {
    margin-right: 0.5rem;
    margin-top: -3px;
    line-break: anywhere;
  }

  .col-checkbox {
    width: 3%;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    padding-left: 3px;
  }

  .col-details {
    width: 55%;
    line-break: normal;
  }

  .workflow-title-with-checkbox {
    display: flex;
    align-items: flex-start;
    gap: 0.75rem;
  }

  .workflow-selection-checkbox {
    margin-top: 5px;
  }

  .col-details-2 {
    width: 45%;
    line-break: anywhere;
  }

  .col-actions {
    width: 29%;
    line-break: normal;
  }

  .col-info {
    width: 18%;
    line-break: anywhere;
  }

  .col-subject {
    width: 18%;
    line-break: normal;
    .ant-tag {
      white-space: pre-line;
    }
  }

  .decision-pill {
    font-weight: 400;
    margin-left: 0.5rem;
  }

  .decision-pill.bg-halted {
    border-color: #f39c12;
  }

  .decision-pill.bg-completed {
    border-color: #16a085;
  }

  .decision-pill.bg-error {
    border-color: #e74c3c;
  }

  .author-list-wrapper {
    color: #777;
  }

  .filtered-accept-core-keyword {
    color: #16a085;
  }
  .filtered-accept-keyword {
    color: #f39c12;
  }

  .text-core {
    color: #16a085;
  }
  .text-non-core {
    color: #f39c12;
  }
  .text-rejected {
    color: #e74c3c;
  }
}

